# makecode-arcade-emulator

./: Cargo.toml  LICENSE  README.md  build.rs.dev  build_to_retroarch.cmd  test.js  test.ts
rusty_v8_static_download/v0.43.1/: .gitignore
src/: binding.js  engine.rs  lib.rs  v8_binding.rs
src/emulator/: effect.rs  game.rs  info.rs  mod.rs  resource.rs  scene.rs  sprite.rs
src/libretro/: bindings.rs  libretro.h  wrapper.h
