[package]
name = "makecode-arcade-emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "makecode_arcade_emu"
path = "src/lib.rs"

#[[bin]]
#name = "makecode-arcade-emu"
#path = "src/lib.rs"

[features]
default=[]
#firestorm-cpu = []
#dhat-heap = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sdl2 = {version = "0.35", features=["unsafe_textures"]}
#firestorm = { version="0.4", features=["enable_system_time"] }
embedded-graphics = "0.7.1"
png = "0.17.5"
lzma-rs = "0.2.0"
v8 = "0.43.1"
serde = "1.0.137"
serde_json = "1.0.81"
#swc_common = { version = "0.18.0", features=["tty-emitter"]}
#swc_ecma_ast = { version = "0.79.0"}
#0.105.6 not compile...!!!
swc_ecma_parser = "=0.105.4"
swc_ecma_codegen="0.109.1"
swc = "0.190.0"
swc_error_reporters = "0.2.0"
#dhat = "0.3.0"
#serde = {version="1.0", features = ["derive"]}
#serde_json = "1.0"

[build-dependencies]
bindgen = "0.53.1"
